--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.organization=islamidder
 sonar.sources=src
 sonar.tests=tests
 sonar.javascript.lcov.reportPaths=coverage/lcov-report/report.json
-sonar.exclusions=fontawesome-free-6.4.0-web/**
+sonar.exclusions=**/fontawesome-free-6.4.0-web/**/*
 
