--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,6 @@
 sonar.projectKey=IslamIdder_memoire
 sonar.organization=islamidder
+sonar.sources=src
+sonar.tests=tests
+sonar.javascript.lcov.reportPaths=coverage/lcov-report/report.json
 
